// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimePicker /> create time picker 1`] = `
<div
  className="fd-time-picker"
  id="myTime"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id="myTime-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                id="myTime-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                  id="myTime-button"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 2`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 3`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 4`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss"
                readOnly={true}
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                  disabled={true}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 5`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 6`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 7`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:mm:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 8`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="mm:ss"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 9`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="mm:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TimePicker /> create time picker 10`] = `
<div
  className="fd-time-picker"
>
  <div
    className="fd-popover fd-popover--no-arrow"
  >
    <div
      className="fd-popover"
      id=""
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover__control"
            onClick={[Function]}
          >
            <div
              className="fd-input-group fd-input-group--after"
            >
              <input
                className="fd-input"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="hh:ss am/pm"
                type="text"
                value=""
              />
              <span
                className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button "
              >
                <button
                  aria-controls="rthHR811"
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="fd-button--light fd-button--compact sap-icon--fob-watch fd-popover__control"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
